--- a/fmf/package.json
+++ b/fmf/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
+    "dotenv": "^16.0.3",
     "firebase": "^9.9.1",
     "fs": "^0.0.1-security",
     "mdb-react-ui-kit": "^4.1.0",
