--- a/fmf/package.json
+++ b/fmf/package.json
@@ -39,7 +39,7 @@
     "workbox-streams": "^6.5.3"
   },
   "scripts": {
-    "start": "PORT=80 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
